Add Dockerfile, README.

--- a/similar_flowers.ipynb
+++ b/similar_flowers.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 288,
    "id": "c5aeaf66",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import itertools\n",
+    "import random\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from pathlib import PurePath\n",
@@ -17,18 +17,34 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "from torchvision import transforms, models\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torchvision import transforms, models, datasets\n",
+    "from torch.utils.data import DataLoader, random_split, Subset\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 289,
+   "id": "113a95c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIRECTORY = 'flowers/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
    "id": "21df4437",
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = (torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu'))"
+    "device = (torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu'))\n",
+    "random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
    ]
   },
   {
@@ -41,7 +57,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 344,
+   "id": "70dd61d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess = transforms.Compose([\n",
+    "    transforms.RandomRotation(10),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "dataset = datasets.ImageFolder(root=DATA_DIRECTORY, transform=preprocess)\n",
+    "\n",
+    "train_size = int(0.7 * len(dataset))\n",
+    "val_size = int(0.15 * len(dataset))\n",
+    "test_size = len(dataset) - train_size - val_size\n",
+    "\n",
+    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size])\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=5, shuffle=True)\n",
+    "### TO SPEED UP TRAINING (DUE TO CPU DEVICE)\n",
+    "num_samples = 10\n",
+    "indices = list(range(num_samples))\n",
+    "train_loader = Subset(train_loader, indices)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96473656",
+   "metadata": {},
+   "source": [
+    "### 2. Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc08d165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload a pretrained ResNet model\n",
+    "model = models.resnet18(pretrained=True)\n",
+    "model = torch.nn.Sequential(*(list(model.children())[:-1]))\n",
+    "model = model.to(device=device)\n",
+    "\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
+    "triplet_loss = nn.TripletMarginLoss(margin=1.0, p=2, eps=1e-7)\n",
+    "\n",
+    "\n",
+    "def create_triplets(dataset):\n",
+    "    triplets = []\n",
+    "    for i in range(len(dataset)):\n",
+    "        anchor, label = dataset[i]\n",
+    "        positive_indices = [j for j in range(len(dataset)) if dataset[j][1] == label and j != i]\n",
+    "        negative_indices = [j for j in range(len(dataset)) if dataset[j][1] != label]\n",
+    "\n",
+    "        if positive_indices and negative_indices:\n",
+    "            positive_index = random.choice(positive_indices)\n",
+    "            negative_index = random.choice(negative_indices)\n",
+    "            triplet = (anchor, dataset[positive_index][0], dataset[negative_index][0])\n",
+    "            triplets.append(triplet)\n",
+    "    return triplets\n",
+    "\n",
+    "model.train()\n",
+    "epochs_num = 2\n",
+    "\n",
+    "for epoch in tqdm(range(epochs_num)):\n",
+    "    triplets = create_triplets(train_dataset)\n",
+    "    for anchor, positive, negative in triplets:\n",
+    "        anchor = anchor.view(-1).unsqueeze(0).to(device=device)\n",
+    "        positive = positive.view(-1).unsqueeze(0).to(device=device)\n",
+    "        negative = negative.view(-1).unsqueeze(0).to(device=device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        anchor_output = model(anchor)\n",
+    "        positive_output = model(positive)\n",
+    "        negative_output = model(negative)\n",
+    "\n",
+    "        loss = triplet_loss(anchor_output, positive_output, negative_output)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    print(f'Epoch [{epoch + 1}/{epochs_num}], Loss: {loss}')\n",
+    "\n",
+    "torch.save(model.state_dict(), 'model.pth')\n",
+    "print(\"Model is saved.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
    "id": "3a18b13f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "id": "6b17de40",
    "metadata": {},
    "outputs": [],
@@ -96,19 +215,6 @@
     "                features = Image(path=image_path).extract_features(model=model)\n",
     "                self.dataset.append([image_path, features])\n",
     "        return self.dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "id": "70ebc88a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Upload pretrained model\n",
-    "model = models.resnet50(pretrained=True)\n",
-    "model.eval()\n",
-    "model = torch.nn.Sequential(*(list(model.children())[:-1]))"
    ]
   },
   {
@@ -2445,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 235,
    "id": "64d8234d",
    "metadata": {},
    "outputs": [],
@@ -2488,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 236,
    "id": "559d0f5e",
    "metadata": {},
    "outputs": [
@@ -2508,14 +2614,6 @@
     "similar_items = find_similar_images(query_image_path=input_path, model=model)\n",
     "display_images(input_path, similar_items)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1aeea00f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
